--- a/SimpleInvesting/Supporting Files/Info.plist
+++ b/SimpleInvesting/Supporting Files/Info.plist
@@ -22,6 +22,12 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ProximaNova-Light.otf</string>
+		<string>ProximaNova-Semibold.otf</string>
+		<string>ProximaNova-Regular.otf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
